# HeisClient_CC

./: .gitignore  .readthedocs.yaml  LICENSE_3RDPARTY.txt  LICENSE_CC.txt  Readme.md
HeisAPI/src/: AI.cpp  AI.h  JSON_analyzer.cpp  JSON_analyzer.h  JSON_data_packet.h  commander.cpp  commander.h  const_val.h  field.cpp  field.h  game.cpp  game.h  game_local.cpp  game_local.h  game_online.h  heis_client_exception.cpp  heis_client_exception.h  infantry.cpp  infantry.h  main.cpp  socket.cpp  socket.h
HeisClient_CC/Tool/HeisPseudoServer/: CMakeLists.txt  Readme.md
HeisClient_CC/Tool/HeisPseudoServer/files/: field_JSON_1.txt  field_JSON_2.txt  field_JSON_final.txt  name_decided_JSON_first.txt  name_decided_JSON_second.txt  name_req_JSON.txt  result_JSON_1.txt  result_JSON_2.txt  scenario_sample.txt
HeisClient_CC/Tool/HeisPseudoServer/setting/: ps_setting.csv
HeisClient_CC/Tool/HeisPseudoServer/setting/files/: field_JSON_final.txt
HeisClient_CC/Tool/HeisPseudoServer/src/: JSON_receiver.cpp  JSON_receiver.h  JSON_sender.cpp  JSON_sender.h  main.cpp  ps_setting_keys.h  scenario_reader.cpp  scenario_reader.h  token_manager.cpp  token_manager.h
HeisClient_CC/Tool/HeisPseudoServer/src/com/: JSON_receiver.cpp  JSON_receiver.h  JSON_sender.cpp
HeisClient_CC/Tool/HeisPseudoServer/src/command/: command_executor_base.h  command_executor_factory.cpp  command_executor_factory.h  recv_command_executor.cpp  recv_command_executor.h  send_command_executor.cpp  send_command_executor.h
HeisClient_CC/Tool/HeisPseudoServer/src/scenario/: scenario_file.cpp  scenario_file.h  scenario_reader.cpp  scenario_reader.h
HeisClient_CC/Tool/HeisPseudoServer/src/setting/: ps_setting_file.cpp  ps_setting_file.h  ps_setting_keys.h
HeisClient_CC/project_linux/: CMakeLists.txt  Makefile
HeisClient_CC/project_linux/log/: .gitkeep
HeisClient_CC/project_win/: HeisClient_CC.sln  HeisClient_CC.vcxproj  HeisClient_CC.vcxproj.filters
HeisClient_CC/project_win/log/: .gitkeep
HeisClient_CC/project_win/setting/: online_setting.csv
HeisClient_CC/setting/: local_setting.csv  online_setting.csv
HeisClient_CC/setting/CC/: audience_setting.conf  local_setting.conf  local_setting.csv  online_setting.conf  online_setting.csv
HeisClient_CC/setting/PseudoServer/: heis_ps_setting.conf  heis_ps_setting.csv
HeisClient_CC/setting/PseudoServer/files/: field_JSON_2.txt  name_decided_JSON_second.txt  result_JSON_1.txt  result_JSON_2.txt
HeisClient_CC/src/: AI.cpp  AI.h  JSON_analyzer.h  JSON_data_packet.h  client_socket.cpp  client_socket.h  commander.cpp  commander.h  common_structure.h  const_val.h  csv_setting_file_reader.cpp  csv_setting_file_reader.h  field.cpp  field.h  game_local.cpp  game_local.h  game_online.cpp  game_online.h  heis_client_exception.h  infantry.cpp  infantry.h  main.cpp  pseudo_server.cpp  pseudo_server.h  server_socket.cpp  server_socket.h  setting_keys.h  socket.cpp  socket.h
HeisClient_CC/src/AI/: ai_base.h  ai_factory.cpp  ai_factory.h  opponent_AI.cpp  opponent_AI.h  sample_ai.cpp  sample_ai.h  user_AI.cpp  user_AI.h
HeisClient_CC/src/JSON/: JSON_analyzer.cpp  JSON_analyzer.h  JSON_data_packet.h  action_json_converter.cpp  action_json_converter.h  board_json_converter.cpp  board_json_converter.h  confirm_name_json_converter.cpp  confirm_name_json_converter.h  json_converter_base.h  message_json_converter.cpp  message_json_converter.h  name_json_converter.cpp  name_json_converter.h  result_json_converter.cpp  result_json_converter.h
HeisClient_CC/src/board/: action_packet_builder.cpp  action_packet_builder.h  board.cpp  board.h  board_controller.cpp  board_controller.h  board_observer.cpp  board_observer.h
HeisClient_CC/src/common/: client_socket.cpp  client_socket.h  common.cpp  common.h  common_structure.h  const_val.h  csv_setting_file_reader.cpp  csv_setting_file_reader.h  game.cpp  game.h  heis_client_exception.cpp  heis_client_exception.h  linux_socket.cpp  log.cpp  log.h  path.cpp  path.h  path_generator.cpp  path_generator.h  server_socket.cpp  server_socket.h  setting_file_reader.cpp  setting_file_reader.h  setting_keys.h  socket.cpp  socket.h  socket_base.cpp  socket_base.h  token_manager.cpp  token_manager.h  windows_socket.h
HeisClient_CC/src/field/: field.cpp  field.h
HeisClient_CC/src/local_mode/: game_local.cpp  game_local.h  local_setting.h  pseudo_server.cpp  pseudo_server.h
HeisClient_CC/src/mode/: audience_mode.cpp  audience_mode.h  game.cpp  game.h  game_local.cpp  game_local.h  game_online.cpp  game_online.h
HeisClient_CC/src/online_mode/: audience_mode.cpp  audience_mode.h  game_online.cpp  game_online.h
HeisClient_CC/src/setting/: audience_setting_file.cpp  audience_setting_file.h  local_setting_file.cpp  local_setting_file.h  online_setting_file.cpp  online_setting_file.h  setting.h  setting_file_base.h
HeisClient_CC/src/unit/: commander.cpp  commander.h  infantry.cpp  infantry.h
HeisClient_CC/src/utils/: common.h  const_val.h  path.cpp  path.h  string_utils.cpp  string_utils.h
HeisJsonTester/HeisJsonTester/: Form1.Designer.cs  Form1.cs  Program.cs
HeisJsonTester/HeisJsonTester/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
doc/: Heis総合クライアント 変更履歴.txt  requirements.txt  変更履歴.md
doc/source/: AI_implementation.md  change_log.md  conf.py  game_mode.md  index.md  installation.md  misc.md  pseudo_server.md  setting.md
doc/説明書/: AI実装ガイド.md  VS使い方ガイド.md  VS使い方ガイド.txt  heisクライアント_AI実装ガイド.txt  heisクライアント_取扱説明書.txt  heis疑似サーバ治具_取扱説明書.txt  設定ガイド.md
(+44 files in other folders)
