# heis CCビルド用cmakeファイル
# Author: Ryo Konno

project(HeisClient_CC)
cmake_minimum_required(VERSION 3.0)
file(GLOB SRCS ../src/*/*/*.cpp ../src/*/*.cpp ../src/*.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -finput-charset=CP932")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/common")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/AI")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/AI/base")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/AI/implementation")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/board")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/JSON")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/local_mode")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/online_mode")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/third_party")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/unit")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/setting")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D CC")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
add_executable(HeisClient_CC ${SRCS})
