# heis CCビルド用cmakeファイル
# Author: Ryo Konno

project(HeisClient_CC)
cmake_minimum_required(VERSION 3.0)
file(GLOB_RECURSE SRCS ../src/*.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -finput-charset=CP932")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/AI")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/com/JSON/converter")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/com/JSON/packet")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/com/JSON/parser")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/com/socket")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/core/board")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/core/unit")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/mode")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/system/log")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/system/setting")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -I../src/utils")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -D CC")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
add_executable(HeisClient_CC ${SRCS})
